--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 font-face {
     font-family: 'Aeonik-Regular';
     /*a name to be used later*/
-    src: url('/Assets/Fonts/Aeonik-Regular.otf');
+    src: url('Aeonik-Regular.otf');
 
 }
 
