dev initial commit

--- a/CSS/common.css
+++ b/CSS/common.css
@@ -1,31 +1,31 @@
 @font-face {
     font-family: 'Baton-Black';
     /*a name to be used later*/
-    src: url('Baton-Black.otf');
+    src: url('/Assets/Fonts/Baton-Black.otf');
 }
 
 @font-face {
     font-family: 'Baton-Medium';
     /*a name to be used later*/
-    src: url('Baton-Medium.otf');
+    src: url('/Assets/Fonts/Baton-Medium.otf');
 }
 
 @font-face {
     font-family: 'Baton-Regular';
     /*a name to be used later*/
-    src: url('Baton-Regular.otf');
+    src: url('/Assets/Fonts/Baton-Regular.otf');
 }
 
 @font-face {
     font-family: 'Aeonik-Bold';
     /*a name to be used later*/
-    src: url('Aeonik-Bold.otf');
+    src: url('/Assets/Fonts/Aeonik-Bold.otf');
 }
 
 @font-face {
     font-family: 'Aeonik-Medium';
     /*a name to be used later*/
-    src: url('Aeonik-Medium.otf');
+    src: url('/Assets/Fonts/Aeonik-Medium.otf');
 
 }
 
